syntax = "proto3";
package rloader;

option java_package = "org.stacktrace.yo.proto.rloader";
option java_outer_classname = "RLoader";

message ConnectionRecieved {
    bool ready = 1;
    string id = 2;
}

message RLoaderMessage {
    oneof message {
        LoadClass loadClass = 1;
        ClassLoaded classLoaded = 2;
        Finished finishedLoading = 3;
    }
}

message LoadClass {
    string resource = 1;
    string id = 2;
}

message ClassLoaded {
    bytes resource = 1;
    bytes hash = 2;
    string id = 3;
}

message Finished {
    string id = 1;
}
